--- a/main.html
+++ b/main.html
@@ -33,7 +33,9 @@
 	</div>
 
 	<div>
+		<label>test1</label>
 		<input data-ns-test="block-inline-input">
+		<label>test2</label>
 		<input data-ns-test="block-inline-input">
 		Answer: Inline
 	</div>
